git commit -m updates index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <marquee direction="right" bgcolor=#e8491d>........Admissions Open For All Classes........</marquee>
     <div class='schoolimg'>
-        <img src="Images/School%20home.png" width='1500px'>
+  <!--        <img src="Images/School%20home.png" width='1500px'>-->
     </div> 
     <div class='about'>
     
